<resources>
    <string name="app_name">野球能力診断</string>
    <string name="title1">野球能力</string>
    <string name="title2">診断アプリ</string>
    <string name="app_start">はじめる</string>
    <string name="create_new">新しく選手を作る</string>
    <string name="see_data">作った選手を見る</string>
    <string name="player_making">野球選手をつくる</string>
    <string name="check_data">つくった選手をみる</string>
    <string name="pitcher_making">投手で作成</string>
    <string name="fielder_making">野手で作成</string>
    <string name="fielder">野 手</string>
    <string name="pitcher">投 手</string>
    <string name="require_name">名前を登録してください</string>
    <string name="require_sex">性別を選んでください</string>
    <string name="require_each_item">各項目を登録してください！</string>
    <string name="go_next">次へ ▶</string>
    <string name="go_back">◀ 戻る</string>
    <string name="go_result">査定結果 ▶</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="cancel">キャンセル</string>
    <string name="confirm_input">入力確認</string>
    <string name="ask_complete">入力はお済みでしょうか</string>
    <string name="done">完了</string>
    <string name="finish">終了</string>
    <string name="ask_finish_app">アプリを終了しますか？</string>
    <string name="ask_go_back">前の画面に戻りますか？</string>
    <string name="input_name">登録名を入力してください</string>
    <string name="appearance">外見</string>
    <string name="personality">性格</string>
    <string name="other">その他</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="tweet">Tweet</string>
    <string name="share_disabled">現在利用不可です。スクリーンショットで画像化お願いします。</string>
    <string name="save_data">SAVE</string>
    <string name="ask_save">データを保存しますか？</string>
    <string name="ask_delete">を削除しますか？</string>
    <string name="completed_save">保存が完了しました</string>
    <string name="failed_save">保存に失敗しました</string>
    <string name="full_data">データがいっぱいです</string>
    <string name="delete">削除</string>
    <string name="top">TOP</string>
    <string name="position_catcher">捕</string>
    <string name="position_first_base">一</string>
    <string name="position_second_base">二</string>
    <string name="position_third_base">三</string>
    <string name="position_shortstop">遊</string>
    <string name="position_outfield">外</string>
    <string name="starter">先発</string>
    <string name="middle_relief">中継ぎ</string>
    <string name="closer">抑え</string>
    <string name="ballistic">弾道</string>
    <string name="contact">ミート</string>
    <string name="power">パワー</string>
    <string name="speed">走力</string>
    <string name="arm">肩力</string>
    <string name="field">守備</string>
    <string name="catching">捕球</string>
    <string name="position">守備位置</string>
    <string name="test_ballistic_arrow">↗︎</string>
    <string name="test_ballistic_num">2</string>
    <string name="test_position">遊</string>
    <string name="average">打率</string>
    <string name="home_run">本塁打</string>
    <string name="home_run_unit">本</string>
    <string name="rbi">打点</string>
    <string name="rbi_unit">点</string>
    <string name="steel">盗塁</string>
    <string name="steel_unit">個</string>
    <string name="test_average_num">.278</string>
    <string name="test_home_run_num">18</string>
    <string name="test_rbi_num">103</string>
    <string name="test_steel_num">13</string>
    <string name="ball_speed">球速</string>
    <string name="kilometers">km/h</string>
    <string name="control">コントロール</string>
    <string name="stamina">スタミナ</string>
    <string name="test_speed">120</string>
    <string name="test_lank">T</string>
    <string name="slider">スライダー</string>
    <string name="curb">カーブ</string>
    <string name="fork">フォーク</string>
    <string name="sinker">シンカー</string>
    <string name="shoot">シュート</string>
    <string name="arrow_slider">←</string>
    <string name="arrow_curb">↙︎</string>
    <string name="arrow_fork">↓</string>
    <string name="arrow_sinker">↘︎</string>
    <string name="arrow_shoot">→</string>
    <string name="test_name">試験太郎</string>
    <string name="win">勝利</string>
    <string name="lose">敗戦</string>
    <string name="save">セーブ</string>
    <string name="era">防御率</string>
    <string name="innings">イニング</string>
    <string name="strikeout">奪三振</string>
    <string name="bb">与四死球</string>
    <string name="ave_against">被打率</string>
    <string name="win_unit">勝</string>
    <string name="lose_unit">負</string>
    <string name="save_unit">S</string>
    <string name="innings_unit">回</string>
    <string name="strikeout_unit">K</string>
    <string name="bb_unit">個</string>
    <string name="test_win_num">18</string>
    <string name="test_lose_num">11</string>
    <string name="test_save_num">31</string>
    <string name="test_era_num">3.56</string>
    <string name="test_innings_num">143</string>
    <string name="test_strikeout_num">108</string>
    <string name="test_bb_num">108</string>
    <string name="test_ave_against">.247</string>
    <string name="salary">年俸</string>
    <string name="hundred_million_unit">億</string>
    <string name="ten_thousand_unit">万</string>
    <string name="yen">円</string>
    <string name="appearance_question1">①身長</string>
    <string name="appearance_question2">②体型</string>
    <string name="appearance_question3">③ビジュアル</string>
    <string name="appearance_question4">④第一印象</string>
    <string name="appearance_question5">⑤ファッション</string>
    <string name="appearance_question6">⑥その他特徴</string>
    <string name="personality_question1">①性格-1</string>
    <string name="personality_question2">②性格-2</string>
    <string name="personality_question3">③性格-3</string>
    <string name="personality_question4">④知性</string>
    <string name="personality_question5">⑤ユーモア</string>
    <string name="personality_question6">⑥その他特徴</string>
    <string name="other_question1">①異性からの人気</string>
    <string name="other_question2">②同性からの人気</string>
    <string name="other_question3">③勝負強さ</string>
    <string name="other_question4">④あなたからの好感</string>
    <string name="other_question5">⑤その他特徴-1</string>
    <string name="other_question6">⑥その他特徴-2</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="policy_title">個人情報保護について</string>
    <string name="policy_message1">＜広告について＞</string>
    <string name="policy_message2">本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobがご利用者の情報を自動取得する場合がございます。取得する情報、利用目的、第三者への提供等につきましては、以下の広告配信事業者のアプリケーション・プライバシーポリシーのリンクよりご確認ください。</string>
    <string name="google_policy"><a href="https://policies.google.com/technologies/ads?hl=ja">Google広告に関するポリシー</a></string>
    <string name="agree">同意する</string>
    <string name="close">閉じる</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="m_array_q1_a">
        <item>~160cm</item>
        <item>161~170cm</item>
        <item>171~180cm</item>
        <item>181~190cm</item>
        <item>191cm~</item>
    </string-array>
    <string-array name="w_array_q1_a">
        <item>~150cm</item>
        <item>151~160cm</item>
        <item>161~170cm</item>
        <item>171~180cm</item>
        <item>181cm~</item>
    </string-array>
    <string-array name="m_array_q2_a">
        <item>ふつう</item>
        <item>スリム</item>
        <item>ぽっちゃり</item>
        <item>ムッチリ</item>
        <item>細マッチョ</item>
        <item>マッチョ</item>
        <item>ゴリマッチョ</item>
    </string-array>
    <string-array name="w_array_q2_a">
        <item>ふつう</item>
        <item>スリム</item>
        <item>ぽっちゃり</item>
        <item>ムッチリ</item>
        <item>筋肉質</item>
        <item>グラマラス</item>
    </string-array>
    <string-array name="m_array_q3_a">
        <item>ふつう</item>
        <item>イケメン</item>
        <item>ワイルド</item>
        <item>かわいい</item>
        <item>強面</item>
        <item>独特</item>
    </string-array>
    <string-array name="w_array_q3_a">
        <item>ふつう</item>
        <item>カワイイ系</item>
        <item>美人系</item>
        <item>地味め</item>
        <item>派手め</item>
        <item>独特</item>
    </string-array>
    <string-array name="m_array_q4_a">
        <item>特になし</item>
        <item>優しそう</item>
        <item>明るそう</item>
        <item>マジメそう</item>
        <item>クールそう</item>
        <item>おとぼけ者</item>
        <item>チャラそう</item>
        <item>大人しそう</item>
        <item>こわそう</item>
    </string-array>
    <string-array name="w_array_q4_a">
        <item>特になし</item>
        <item>優しそう</item>
        <item>マジメそう</item>
        <item>こわそう</item>
        <item>元気そう</item>
        <item>大人しそう</item>
        <item>チャラそう</item>
        <item>明るそう</item>
        <item>清楚そう</item>
    </string-array>
    <string-array name="m_array_q5_a">
        <item>ふつう</item>
        <item>無頓着</item>
        <item>オシャレ</item>
        <item>地味め</item>
        <item>派手め</item>
        <item>独創的</item>
    </string-array>
    <string-array name="w_array_q5_a">
        <item>ふつう</item>
        <item>無頓着</item>
        <item>オシャレ</item>
        <item>地味め</item>
        <item>派手め</item>
        <item>独創的</item>
    </string-array>
    <string-array name="m_array_q6_a">
        <item>特になし</item>
        <item>目力強い</item>
        <item>眉毛細い</item>
        <item>色白</item>
        <item>ロン毛</item>
        <item>毛深い</item>
        <item>メガネ男子</item>
    </string-array>
    <string-array name="w_array_q6_a">
        <item>特になし</item>
        <item>目力強い</item>
        <item>切れ目</item>
        <item>色白</item>
        <item>ショートカット</item>
        <item>ばっちりメイク</item>
        <item>メガネ女子</item>
    </string-array>
    <string-array name="m_array_q1_p">
        <item>特になし</item>
        <item>穏やか</item>
        <item>おとなしい</item>
        <item>淡々</item>
        <item>騒がしい</item>
        <item>ミステリアス</item>
        <item>威圧的</item>
    </string-array>
    <string-array name="w_array_q1_p">
        <item>特になし</item>
        <item>穏やか</item>
        <item>おとなしい</item>
        <item>サバサバ</item>
        <item>おしゃべり</item>
        <item>ミステリアス</item>
        <item>威圧的</item>
    </string-array>
    <string-array name="m_array_q2_p">
        <item>特になし</item>
        <item>優しい</item>
        <item>頑張り屋さん</item>
        <item>気が強い</item>
        <item>無気力</item>
        <item>目立ちたがり</item>
        <item>疑り深い</item>
        <item>ポジティブ</item>
    </string-array>
    <string-array name="w_array_q2_p">
        <item>特になし</item>
        <item>優しい</item>
        <item>頑張り屋さん</item>
        <item>気が強い</item>
        <item>無気力</item>
        <item>目立ちたがり</item>
        <item>かまってちゃん</item>
        <item>疑り深い</item>
        <item>ポジティブ</item>
    </string-array>
    <string-array name="m_array_q3_p">
        <item>特になし</item>
        <item>リーダー</item>
        <item>控えめ</item>
        <item>ムードメーカー</item>
        <item>批評家</item>
        <item>アイデアマン</item>
        <item>一匹オオカミ</item>
    </string-array>
    <string-array name="w_array_q3_p">
        <item>特になし</item>
        <item>リーダー</item>
        <item>控えめ</item>
        <item>ムードメーカー</item>
        <item>批評家</item>
        <item>アイデアマン</item>
        <item>一匹オオカミ</item>
    </string-array>
    <string-array name="m_array_q4_p">
        <item>ふつう</item>
        <item>お勉強得意</item>
        <item>地頭が良い</item>
        <item>天才</item>
        <item>頭からっぽ</item>
        <item>脳筋</item>
    </string-array>
    <string-array name="w_array_q4_p">
        <item>ふつう</item>
        <item>お勉強得意</item>
        <item>地頭が良い</item>
        <item>天才</item>
        <item>頭からっぽ</item>
        <item>脳筋</item>
    </string-array>
    <string-array name="m_array_q5_p">
        <item>ふつう</item>
        <item>天然</item>
        <item>冗談多め</item>
        <item>話が上手い</item>
        <item>ツッコミ上手</item>
        <item>とにかく面白い</item>
        <item>いじられキャラ</item>
        <item>つまらない</item>
    </string-array>
</resources>