<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/abilities_box_background"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="3dp"
    tools:context=".fragment.player_info.FielderRecordFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1.0"
        android:background="@drawable/batter_record_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/average"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/average_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:maxLines="1"
            android:text="@string/test_average_num"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1.0"
        android:background="@drawable/batter_record_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:text="@string/home_run"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homer_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_home_run_num"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_run_unit"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1.0"
        android:background="@drawable/batter_record_background"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/rbi"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:maxLines="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rbi_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_rbi_num"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbi_unit"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1.0"
        android:background="@drawable/batter_record_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/steel"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/steel_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_steel_num"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steel_unit"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
