<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/batter_record_background"
    android:orientation="vertical"
    tools:context=".fragment.SalaryParentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/salary"
        android:textColor="#ffd700"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/white_round_background"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hundred_million_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/hundred_million_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hundred_million_unit"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ten_thousand_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/ten_thousand_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_thousand_unit"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>

