<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#90ee90"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_A"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:text="@string/appearance"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_P"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:text="@string/personality"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_O"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:text="@string/other"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="onClickBack"
                android:textSize="20sp"
                android:text="@string/go_back" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="onClickNext"
                android:textSize="20sp"
                android:text="@string/go_next" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/frame_for_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1.0">

        </FrameLayout>



    </LinearLayout>


</LinearLayout>